syntax = "proto3";

package cart;

service CartService {
  rpc GetCart (GetCartRequest) returns (Cart) {}
  rpc ClearCart (ClearCartRequest) returns (ClearCartResponse) {}
}

message GetCartRequest {
  string userId = 1;
}

message ClearCartRequest {
  string userId = 1;
}

message CartItem {
  string productId = 1;
  int32 quantity = 2;
  double price = 3;
  string name = 4;
}

message Cart {
  string userId = 1;
  repeated CartItem items = 2;
  double totalAmount = 3;
}

message ClearCartResponse {
  bool success = 1;
  string message = 2;
} 